
=======================================================
            WanT code:  Log of Changes 
=======================================================


23 Mar 2007      f_defs.h (definitions for fortran files) generated by configure
                 following "the octopus way" (suggested by C.A. Rozzi). 
                 Other changes to configure.ac to fix a -I issue related to IFLAGS. (AF)

16 Mar 2007      rcut variable added to midpoint.f90 to define an upper bound for
                 bond lengths. (AF)

14 Mar 2007      Parsing of output files implemented (parser_output.awk added);
                 check.sh script strongly updated to allow for automatic test check. (AF)

12 Mar 2007      Auxiliary allowed value for spin_component "dw" added. Input var 
                 spin_component deleted from plot namelist since already overwritten
                 by the value read from .space file. Documentation updated. 
                 Interface to DFT data related to spin simplified (windows_setspin routine
                 added). 

                 WARNING: important BUG fix
                 when doing spin polarized calculation, QEXPT lib was buggy and used to
                 read spin up wfc when spin down states were required (spin up were right anyway). 
                 QEXML lib is right (sort of) anyway. (AF)

11 Mar 2007      Documentation about blc2wan.f90, dos.f90, conductor.f90 updated. (AF)

09 Mar 2007      Self-energy stuff added in dos.f90 (some special cases not yet implemented);
                 operator_moduel added to wannier/ ; general driver for matrix inversion
                 added to util.f90; lapack_all.f90 and lapack_atlas.f90 libs updated. 
                 When reading dynamical self-energies, dos.x and conductor.x overwirte
                 the input energy grids with those from file. (AF)

08 Mar 2007      Further updates in blc2wan.f90; input summary added, output results checked. 