@@ -24,7 +24,7 @@
                                  use_overlap, use_correlation, write_kdata
    USE T_egrid_module,    ONLY : ne, emin, emax, de
    USE T_smearing_module, ONLY : delta, smearing_type, nx_smear => nx, xmax
-   USE T_kpoints_module,  ONLY : nkpts_par, nk_par, vkpt_par, wk_par, &
+   USE T_kpoints_module,  ONLY : nkpts_par, nk_par, s_par, vkpt_par, wk_par, use_symm, &
                                  kpoints_alloc => alloc
    USE T_kpoints_module,  ONLY : nrtot_par, nr_par, vr_par, wr_par
    USE io_module,         ONLY : work_dir, prefix, postfix
@@ -38,8 +38,9 @@
    !
    ! local variables
    !
-   INTEGER      :: i, ik
+   INTEGER      :: i, ik, ir
    INTEGER      :: nk_par3D(3)       ! 3D kpt mesh generator
+   INTEGER      :: s_par3D(3)        ! 3D shifts
    INTEGER      :: nr_par3D(3)       ! 3D R-vect mesh generator
    REAL(dbl)    :: vkpt_par3D(3)     ! 3D kpt-vectors
    REAL(dbl)    :: vr_par3D(3)       ! 3D R-vectors
@@ -88,8 +89,8 @@
    WRITE(unit,"( 7x,'Energy Step   :',5x,f10.5)") de
    WRITE(unit,"( 7x,'Delta         :',5x,f10.5)") delta
    WRITE(unit,"( 7x,'Smearing Type :',5x,a)")     TRIM(smearing_type)
-   WRITE(unit,"( 7x,'Smearing grid Dimension :',5x,i6)")    nx_smear
-   WRITE(unit,"( 7x,'Smearing grid Extrema   :',5x,f10.5)") xmax
+   WRITE(unit,"( 7x,'Smearing grid :',5x,i6)")    nx_smear
+   WRITE(unit,"( 7x,'Smearing gmax :',5x,f10.5)") xmax
    WRITE(unit,"( 2x,'</ENERGY_GRID>',/)" )
 
    IF ( kpoints_alloc ) THEN
@@ -97,102 +98,92 @@
        WRITE( unit, "( /,2x,'<K-POINTS>')" )
        WRITE( unit, "( 7x, 'nkpts_par = ',i4 ) " ) nkpts_par
        WRITE( unit, "( 7x, 'nrtot_par = ',i4 ) " ) nrtot_par
+       WRITE( unit, "( 7x, ' use_symm = ',a  ) " ) TRIM(log2char(use_symm))
        !
-       ! 3D vectors initialization
        !
-       nk_par3D(:) = 1
-       nr_par3D(:) = 1
-       vkpt_par3D(:) = ZERO
-       vr_par3D(:) = ZERO
+       nk_par3D(:) = imask( nk_par, 1, transport_dir )
+       s_par3D(:)  = imask(  s_par, 0, transport_dir )
        !
-       SELECT CASE (transport_dir)
-
-       CASE (1)
-           !
-           ! transport direction along the x axis
-           !
-           nk_par3D(2) = nk_par(1) 
-           nk_par3D(3) = nk_par(2) 
-           !
-           WRITE( unit, "(/,7x, 'Parallel kpoints grid:      nk = (',3i3,' )') " ) nk_par3D(:) 
-           !
-           DO ik=1,nkpts_par
-              vkpt_par3D(2) = vkpt_par(1,ik)
-              vkpt_par3D(3) = vkpt_par(2,ik)
-              WRITE( unit, "(7x, 'k (', i4, ') =    ( ',3f9.5,' ),   weight = ', f8.4 )") &
-                     ik, ( vkpt_par3D(i), i=1,3 ), wk_par(ik)
-           ENDDO
-           !
-           nr_par3D(2) = nr_par(1) 
-           nr_par3D(3) = nr_par(2) 
-           !
-           WRITE( unit, "(/,7x, 'Parallel R vector grid:      nr = (',3i3,' )') " ) nr_par3D(:) 
-           !
-           DO ik=1,nrtot_par
-              vr_par3D(2) = vr_par(1,ik)
-              vr_par3D(3) = vr_par(2,ik)
-              WRITE( unit, "(7x, 'R (', i4, ') =    ( ',3f9.5,' ),   weight = ', f8.4 )") &
-                     ik, ( vr_par3D(i), i=1,3 ), wr_par(ik)
-           ENDDO
-    
-       CASE (2)
-           !
-           ! transport direction along the y axis
-           !
-           nk_par3D(1) = nk_par(1) 
-           nk_par3D(3) = nk_par(2) 
-           !
-           WRITE( unit, "(/,7x, 'Parallel kpoints grid:      nk = (',3i3,' )') " ) nk_par3D(:) 
-           !
-           DO ik=1,nkpts_par
-              vkpt_par3D(1) = vkpt_par(1,ik)
-              vkpt_par3D(3) = vkpt_par(2,ik)
-              WRITE( unit, " (7x, 'k (', i4, ') =    ( ',3f9.5,' ),   weight = ', f8.4 )") &
-                     ik, ( vkpt_par3D(i), i=1,3 ), wk_par(ik)
-           ENDDO
-           !
-           nr_par3D(1) = nr_par(1) 
-           nr_par3D(3) = nr_par(2) 
-           !
-           WRITE( unit, "(/,7x, 'Parallel R vector grid:      nr = (',3i3,' )') " ) nr_par3D(:) 
-           !
-           DO ik=1,nrtot_par
-              vr_par3D(1) = vr_par(1,ik)
-              vr_par3D(3) = vr_par(2,ik)
-              WRITE( unit, " (7x, 'R (', i4, ') =    ( ',3f9.5,' ),   weight = ', f8.4 )") &
-                     ik, ( vr_par3D(i), i=1,3 ), wr_par(ik)
-           ENDDO
-    
-       CASE (3)
-           !
-           ! transport direction along the z axis
-           !
-           nk_par3D(1) = nk_par(1) 
-           nk_par3D(2) = nk_par(2) 
-           !
-           WRITE( unit, "(/,7x, 'Parallel kpoints grid:      nk = (',3i3,' )') " ) nk_par3D(:) 
-           !
-           DO ik=1,nkpts_par
-              vkpt_par3D(1) = vkpt_par(1,ik)
-              vkpt_par3D(2) = vkpt_par(2,ik)
-              WRITE( unit, " (7x, 'k (', i4, ') =    ( ',3f9.5,' ),   weight = ', f8.4 )") &
-                     ik, ( vkpt_par3D(i), i=1,3 ), wk_par(ik)
-           ENDDO
-           !
-           nr_par3D(1) = nr_par(1) 
-           nr_par3D(2) = nr_par(2) 
-           !
-           WRITE( unit, "(/,7x, 'Parallel R vector grid:      nr = (',3i3,' )') " ) nr_par3D(:) 
-           !
-           DO ik=1,nrtot_par
-              vr_par3D(1) = vr_par(1,ik)
-              vr_par3D(2) = vr_par(2,ik)
-              WRITE( unit, " (7x, 'R (', i4, ') =    ( ',3f9.5,' ),   weight = ', f8.4 )") &
-                     ik, ( vr_par3D(i), i=1,3 ), wr_par(ik)
-           ENDDO
-       END SELECT
+       WRITE( unit, "(/,7x, 'Parallel kpoints grid:',8x, &
+                           &'nk = (',3i3,' )',3x,'s = (',3i3,' )') " ) nk_par3D(:), s_par3D(:) 
+       !
+       DO ik=1,nkpts_par
+          !
+          vkpt_par3D(:) = rmask( vkpt_par(:,ik), ZERO, transport_dir )
+          !
+          WRITE( unit, "(7x, 'k (', i4, ') =    ( ',3f9.5,' ),   weight = ', f8.4 )") &
+                 ik, vkpt_par3D(:), wk_par(ik)
+       ENDDO
+       !
+       nr_par3D(:) = imask( nr_par, 1, transport_dir )
+       !
+       WRITE( unit, "(/,7x, 'Parallel R vector grid:      nr = (',3i3,' )') " ) nr_par3D(:) 
+       !
+       DO ir=1,nrtot_par
+          !
+          vr_par3D(:) = rmask( vr_par(:,ir), ZERO, transport_dir )
+          !
+          WRITE( unit, "(7x, 'R (', i4, ') =    ( ',3f9.5,' ),   weight = ', f8.4 )") &
+                 ir, vr_par3D(:), wr_par(ir)
+       ENDDO
+       !    
    ENDIF
    WRITE( unit, " ( 2x,'</K-POINTS>',/)" )
+
+
+CONTAINS
+
+!*****************************
+   FUNCTION imask ( ivect, init, dir )
+   !*****************************
+   IMPLICIT NONE
+      INTEGER :: imask(3)
+      INTEGER :: ivect(2), init
+      INTEGER :: dir 
+      !
+      imask( : ) = init
+      !
+      SELECT CASE ( dir )
+      CASE ( 1 )
+         imask( 2 ) = ivect(1) 
+         imask( 3 ) = ivect(2) 
+      CASE ( 2 )
+         imask( 1 ) = ivect(1) 
+         imask( 3 ) = ivect(2) 
+      CASE ( 3 )
+         imask( 1 ) = ivect(1) 
+         imask( 2 ) = ivect(2) 
+      CASE DEFAULT
+         CALL errore('summary','invalid dir',21)
+      END SELECT
+      !
+   END FUNCTION imask
+
+!*****************************
+   FUNCTION rmask ( rvect, init, dir )
+   !*****************************
+   IMPLICIT NONE
+      REAL(dbl) :: rmask(3)
+      REAL(dbl) :: rvect(2), init
+      INTEGER   :: dir 
+      !
+      rmask( : ) = init
+      !
+      SELECT CASE ( dir )
+      CASE ( 1 )
+         rmask( 2 ) = rvect(1) 
+         rmask( 3 ) = rvect(2) 
+      CASE ( 2 )
+         rmask( 1 ) = rvect(1) 
+         rmask( 3 ) = rvect(2) 
+      CASE ( 3 )
+         rmask( 1 ) = rvect(1) 
+         rmask( 2 ) = rvect(2) 
+      CASE DEFAULT
+         CALL errore('summary','invalid dir',21)
+      END SELECT
+      !
+   END FUNCTION
 
 END SUBROUTINE summary
 
