@@ -4,9 +4,15 @@
 =======================================================
 
 
+24 Mar 2007      kpt symmetrization added to transport (Time-reversal symmetry implemented
+                 at the moment). Vars "USE_SYMM" and "S(3)" added to transport input.
+                 Default to use_symm set to temporarily to .FALSE. (AF)
+                 Memory issue in transport fixed. (BB)
+
 23 Mar 2007      f_defs.h (definitions for fortran files) generated by configure
                  following "the octopus way" (suggested by C.A. Rozzi). 
-                 Other changes to configure.ac to fix a -I issue related to IFLAGS. (AF)
+                 Other changes to configure.ac to fix a -I issue related to IFLAGS. 
+                 TIme reversal symmetry implemented in transport calculation. (AF)
 
 16 Mar 2007      rcut variable added to midpoint.f90 to define an upper bound for
                  bond lengths. (AF)
